// CHANGELOG.txt
//  SeedingApplication
//
//  Created by Austin Fuller on 2/3/17.
//  Copyright © 2017 Austin Fuller. All rights reserved.
//

This is a change log for the application. It contains general notes for me to used.

/////
PUSH DATE:
COMMIT CODE:
Seeding Application Change Log:

Worklist:
- [x] Update all files to include modified by Austin Fuller
- [x] Commenting of all code
- [x] Correct Twitter on main screen
- [ ] Reduce as many build errors as possible

Larger Goals:
- [ ] Complete rework of Welcome Screen -> Need custom icons for navigation bar. Need one for info icon
- [ ] Complete rework of Contact Us Section
- [ ] Plus size Optimizations
- [ ] SE size Optimizations
- [ ] Downloads pdf files once when they are external
- [ ] Correct calculations for seeding rate
- [ ] Update icon set to be high def
- [ ] Go back to main screen if coming in from Facebook. <- Make Facebook URL from Contact US goes to Facebook App -> move if statement into button action.
- [ ] County selector -> add "select" button
- [ ] Alert formatting in “Seed Volume” title -> county.
- [-] Only ask for GPS location once when App launches. Then find it in MyVaribles until app is closed. -> Also needed, but need the figure out the specifics.
- [-] Add County in top four main screen section that currently says “Kansas Wheat” -> Need have correct title when coming in from the selector.


/////
PUSH DATE: 2/4/2017
COMMIT CODE: 442af1c
Seeding Application Change Log:

Improvement Email from Shubh:
- [x] *** On “contact us”, if I click on an email (either mine or Ray’s) and try to cancel it (for example if I don’t want to send it anymore), the app does not go back – it stays with the email/outlook page open. - http://stackoverflow.com/questions/10878744/how-to-display-pdf-on-ios
